# ezmpc

./: Cargo.toml  README.md  build.rs
conf/: private_0.ron  private_1.ron  private_2.ron
config/: private_0.ron  private_0.toml  private_1.ron  private_1.toml  private_2.ron  private_2.toml  public.ron  public.toml  synchronizer.ron
prog/: io.ron  mul.ron
src/: algebra.rs  crypto.rs  error.rs  fake_prep.rs  integration_test.rs  io.rs  lib.rs  machine.rs  message.rs  net.rs  node.rs  party.rs  shim.cpp  synchronizer.rs  vm.rs
src/cpp/: shim.cpp  shim.h
