[package]
name = "ezmpc"
version = "0.1.0"
authors = ["kc1212 <kc1212@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
crossbeam = "0.8"
thiserror = "1.0"
log = "0.4"
env_logger = "0.8"
num-traits = "0.2"
auto_ops = "0.1"
sha3 = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ron = "0.6"
quickcheck = "0.9"
clap = "3.0.0-beta.2"

ff = { version = "0.9", features = ["derive"] }
# the crates below are needed by ff
rand_core = "0.6"
bitvec = "0.20"
subtle = "2.4"
byteorder = "1"

[dev-dependencies]
itertools = "0.9.0"
test-env-log = "0.2"
quickcheck_macros = "0.9"
